--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "faker": "^5.5.3",
     "prettier": "^2.5.1"
   },
   "dependencies": {
-    "express": "^4.17.2",
-    "faker": "^5.5.3"
+    "express": "^4.17.2"
   }
 }
